--- a/templates/home.html
+++ b/templates/home.html
@@ -1,15 +1,12 @@
 <ul class="ads">
-	<li ng-repeat="ad in ads.ads" class="box">
-		<h1>{{ad.title}}</h1>
-        <div><strong>Date:</strong> {{ad.date | date:'dd-MMM-yyyy'}}</div>
+    <li ng-repeat="ad in ads.ads" class="box">
+        <h2>{{ad.title}}</h2> <!-- GO, GO, SEO! :D -->
+        <div><strong>Date:</strong> {{ad.date| date:'dd-MMM-yyyy'}}</div>
         <div ng-if='ad.imageDataUrl'>
             <strong>Image:</strong>
             <img class="ad-image" ng-src="{{ad.imageDataUrl}}" />
         </div>
-        // TODO: display all other fields for the current ad
-	</li>
+    </li>
 </ul>
 
-<div ng-if="ads.ads.length==0" class="box no-data">
-    No ads found.
-</div>
+<div ng-if="ads.ads.length == 0" class="box no-data">No ads found.</div>
