--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,40 @@
-<ul class="ads">
-    <li ng-repeat="ad in ads.ads" class="box">
-        <h2>{{ad.title}}</h2> <!-- GO, GO, SEO! :D -->
-        <div><strong>Date:</strong> {{ad.date| date:'dd-MMM-yyyy'}}</div>
-        <div ng-if='ad.imageDataUrl'>
-            <strong>Image:</strong>
-            <img class="ad-image" ng-src="{{ad.imageDataUrl}}" />
+<div ng-repeat="ad in ads.ads" class="col-xs-12 box">
+    <h2 class="col-xs-9">{{ad.title}}</h2> <!-- GO, GO, SEO! :D -->
+    <div class="col-xs-3">{{ad.date| date:'dd-MMM-yyyy'}}</div>
+    <div class="col-xs-4 dot-box" ng-if='ad.imageDataUrl'>
+        <img class="ad-image" ng-src="{{ad.imageDataUrl}}" />
+    </div>
+    <div class="col-xs-4 dot-box" ng-if="!ad.imageDataUrl">
+        test
+    </div>
+    <div class="col-xs-8 ad-info-holder">
+        <p class="dot-box">{{ad.text}}</p>
+        <div class="col-xs-12">
+            <label class="col-xs-4 col-md-2 control-label">Name</label>
+            <div class="col-xs-4 col-md-10 dot-box">{{ad.ownerName}}</div>
         </div>
-    </li>
-</ul>
+        <div class="col-xs-12">
+            <label class="col-xs-4 col-md-2 control-label">Email</label>
+            <div class="col-xs-4 col-md-10 dot-box">{{ad.ownerEmail}}</div>
+        </div>
+        <div class="col-xs-12">
+            <label class="col-xs-4 col-md-2 control-label">Tel.</label>
+            <div class="col-xs-4 col-md-10 dot-box">{{ad.ownerPhone}}</div><br/>
+        </div>
+    </div>
+</div>
+
+<!--
+"id":778,
+"title":"",
+"text":"Kasskata(аз) ",
+"date":"2015-01-13T22:00:00.0000000",
+"imageDataUrl":null,
+"ownerName":"ffffff",
+"ownerEmail":"ffffff@abv.bg",
+"ownerPhone":"46456456546",
+"categoryId":5,
+"townId":1}
+--->
 
 <div ng-if="ads.ads.length == 0" class="box no-data">No ads found.</div>
