Added no-image image

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
         <img class="ad-image" ng-src="{{ad.imageDataUrl}}" />
     </div>
     <div class="col-xs-4 dot-box" ng-if="!ad.imageDataUrl">
-        test
+        <img class="ad-image" ng-src="/images/noimage.png" />
     </div>
     <div class="col-xs-8 ad-info-holder">
         <p class="dot-box">{{ad.text}}</p>
