--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
     font-family: "Roboto", Arial, serif;
-    background-color: #c3ffab;
+    background-color: #d1ffb6;
 }
 
 #app-content {
@@ -8,7 +8,7 @@ body {
 }
 
 #app-header {
-    background-color: #a9d18e;
+    background-color: #aad26e;
     border: #507E32 1px solid;
     margin: 0 5px 5px 5px;
     text-align: center;
@@ -29,7 +29,7 @@ body {
 }
 
 #app-footer {
-    background-color: #a9d18e;
+    background-color: #aad26e;
     border: #507E32 1px solid;
     font-weight: normal;
     text-align: center;
@@ -42,7 +42,7 @@ body {
 
 .box {
     border: #507E32 1px solid;
-    background: #a9d18e;
+    background: #aad26e;
     display: block;
     margin: 15px 0;
     padding: 10px;
@@ -123,4 +123,21 @@ h1, h2, h3 {
 .ad-info-holder > p,
 .ad-info-holder > div {
     margin-bottom: 7px;
+}
+
+#main-content {
+    padding: 10px;
+}
+
+#login-box {
+    border: 1px solid #507d31;
+    border-radius: 10px;
+    padding: 10px;
+    background-color: #aad26e;
+}
+
+button, input[type="button"], input[type="submit"] {
+    background-color: #6fac46 !important;
+    border: 1px solid #507d31 !important;
+    border-radius: 5px !important;
 }
