--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,9 @@
+* {
+    font-family: "Roboto", Arial, serif !important;
+}
+
 body {
-    font-family: "Roboto", Arial, serif;
-    background-color: #d1ffb6;
+    background-color: #d1ffb6 !important;
 }
 
 #app-content {
@@ -94,7 +97,7 @@ ul.sidebar-menu li a, ul.sidebar-menu li a:focus {
 }
 
 .ad-image {
-    max-width: 150px;
+    max-width: 100% !important;
 }
 
 h1, h2, h3 {
@@ -126,7 +129,7 @@ h1, h2, h3 {
 }
 
 #main-content {
-    padding: 10px;
+    padding: 0px 15px 10px 5px !important;
 }
 
 #login-box {
@@ -136,8 +139,20 @@ h1, h2, h3 {
     background-color: #aad26e;
 }
 
-button, input[type="button"], input[type="submit"] {
+button, input[type="button"], input[type="submit"], .button {
+    display: block !important;
     background-color: #6fac46 !important;
     border: 1px solid #507d31 !important;
     border-radius: 5px !important;
+    min-width: 100px !important; 
+    padding: 10px 20px !important;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
+    font-weight: 500 !important;
+    text-decoration: none !important;
+    color: #fff !important;
+    margin-bottom: 10px;
+}
+
+.last-column {
+    padding-right: 0px !important;
 }
