--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
 <div class="col-xs-12">
-    <div id='login-box' class="col-xs-offset-2 col-xs-8">
+    <div id='login-box' class="box col-xs-offset-2 col-xs-8">
         <form class="form-horizontal">
             <fieldset>
                 <legend>Login</legend>
