--- a/templates/main/left-sidebar.html
+++ b/templates/main/left-sidebar.html
@@ -1,18 +1,15 @@
-<!--
-
-TODO: implement logic to show different navigation menu for:
-  - anonymous site visitors
-  - logged in users
-  - logged in administrators
-
--->
-
-<!-- Navigation box for anonymous site visitors -->
 <div class="box">
-  <h2>Navigation</h2>
-  <ul class="sidebar-menu">
-      <li><a href="#/">Home</a></li>
-      <li><a href="#/login">Login</a></li>
-      <li><a href="#/register">Register</a></li>
-  </ul>
+    <h2>Navigation</h2>
+    <ul class="sidebar-menu">
+        <li><a href="#/">Home</a></li>
+        <li><a href="#/login">Login</a></li>
+        <li><a href="#/register">Register</a></li>
+    </ul>
+</div>
+<div class="box text-center">
+    <p>
+        To publish news you have to be logged in.
+    </p>
+    <a href="#/login" class="button">Login</a>
+    <a href="#/register" class="button">Register</a>
 </div>
