--- a/templates/main/left-sidebar.html
+++ b/templates/main/left-sidebar.html
@@ -4,6 +4,13 @@
         <li><a href="#/">Home</a></li>
         <li><a href="#/login">Login</a></li>
         <li><a href="#/register">Register</a></li>
+        <li><a href="#/user/home">User Home</a></li>
+        <li><a href="#/user/ads/publish">Publish Ad</a></li>
+        <li><a href="#/user/profile">User Profile</a></li>
+        <li><a href="#/">AD</a></li>
+        <li><a href="#/">AD</a></li>
+        <li><a href="#/">AD</a></li>
+        <li><a href="#/logout">Logout</a></li>
     </ul>
 </div>
 <div class="box text-center">
