--- a/templates/register.html
+++ b/templates/register.html
@@ -30,9 +30,7 @@
         </div>
         <div class="form-group">
             <label for="town">Town:</label>
-            <select class="form-control" id="town">
-                <option value="null">(None)</option>
-            </select>
+            <select class="form-control" id="town" ng-options="town.id as town.name for town in towns" ng-model="user.townID"></select>
         </div>
     </div>
 
