--- a/templates/login.html
+++ b/templates/login.html
@@ -6,13 +6,13 @@
                 <div class="form-group">
                     <div class="col-lg-offset-1 col-lg-10">
                         Username<br />
-                        <input class="form-control" id="inputEmail" placeholder="Username" type="text" ng-model="user.username">
+                        <input class="form-control" placeholder="Username" type="text" ng-model="user.username" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-lg-offset-1 col-lg-10">
                         Password<br />
-                        <input class="form-control" id="inputPassword" placeholder="Password" type="password" ng-model="user.password">
+                        <input class="form-control" placeholder="Password" type="password" ng-model="user.password" required>
                     </div>
                 </div>
                 <div class="form-group">
