--- a/templates/main/left-sidebar.html
+++ b/templates/main/left-sidebar.html
@@ -5,7 +5,7 @@
         <li><a href="#/login">Login</a></li>
         <li><a href="#/register">Register</a></li>
         <li><a href="#/user/home">User Home</a></li>
-        <li><a href="#/user/ads/publish">Publish Ad</a></li>
+        <li><a href="#/user/ads/publish">Publish New Ad</a></li>
         <li><a href="#/user/profile">User Profile</a></li>
         <li><a href="#/">AD</a></li>
         <li><a href="#/">AD</a></li>
