--- a/templates/main/left-sidebar.html
+++ b/templates/main/left-sidebar.html
@@ -1,22 +1,12 @@
-<div class="box">
-    <h2>Navigation</h2>
-    <ul class="sidebar-menu">
-        <li><a href="#/">Home</a></li>
-        <li><a href="#/login">Login</a></li>
-        <li><a href="#/register">Register</a></li>
-        <li><a href="#/user/home">User Home</a></li>
-        <li><a href="#/user/ads/publish">Publish New Ad</a></li>
-        <li><a href="#/user/profile">User Profile</a></li>
-        <li><a href="#/">AD</a></li>
-        <li><a href="#/">AD</a></li>
-        <li><a href="#/">AD</a></li>
-        <li><a href="#/logout">Logout</a></li>
-    </ul>
-</div>
-<div class="box text-center">
-    <p>
-        To publish news you have to be logged in.
-    </p>
-    <a href="#/login" class="button">Login</a>
-    <a href="#/register" class="button">Register</a>
+<div>
+    <div class="box">
+        <h2>Navigation</h2>
+        <ul class="sidebar-menu">
+            <li><a href="#/">Home</a></li>
+            <li><a href="#/user/ads">My ads</a></li>
+            <li><a href="#/user/ads/new">Publish new ads</a></li>
+            <li><a href="#/user/profile">Edit profile</a></li>
+            <li><a href="#/logout">Logout</a></li>
+        </ul>
+    </div>
 </div>
