--- a/templates/main/left-sidebar.html
+++ b/templates/main/left-sidebar.html
@@ -4,7 +4,7 @@
         <ul class="sidebar-menu">
             <li><a href="#/">Home</a></li>
             <li><a href="#/user/ads">My ads</a></li>
-            <li><a href="#/user/ads/new">Publish new ads</a></li>
+            <li><a href="#/user/ads/publish">Publish new ads</a></li>
             <li><a href="#/user/profile">Edit profile</a></li>
             <li><a href="#/logout">Logout</a></li>
         </ul>
