--- a/templates/home.html
+++ b/templates/home.html
@@ -2,25 +2,25 @@
     <div ng-repeat="ad in ads.ads" class="col-xs-12 box">
         <h2 class="col-xs-9">{{ad.title}}</h2> <!-- GO, GO, SEO! :D -->
         <div class="col-xs-3">{{ad.date| date:'dd-MMM-yyyy'}}</div>
-        <div class="col-xs-4 dot-box" ng-if='ad.imageDataUrl'>
+        <div class="col-xs-4 text-center dot-box" ng-if='ad.imageDataUrl'>
             <img class="ad-image" ng-src="{{ad.imageDataUrl}}" />
         </div>
-        <div class="col-xs-4 dot-box" ng-if="!ad.imageDataUrl">
+        <div class="col-xs-4 text-center dot-box" ng-if="!ad.imageDataUrl">
             <img class="ad-image" ng-src="/images/noimage.png" />
         </div>
         <div class="col-xs-8 ad-info-holder">
             <p class="dot-box">{{ad.text}}</p>
             <div class="col-xs-12">
                 <label class="col-xs-4 col-md-2 control-label">Name</label>
-                <div class="col-xs-4 col-md-10 dot-box">{{ad.ownerName}}</div>
+                <div class="col-xs-4 col-md-10 dot-box info-box">{{ad.ownerName}}</div>
             </div>
             <div class="col-xs-12">
                 <label class="col-xs-4 col-md-2 control-label">Email</label>
-                <div class="col-xs-4 col-md-10 dot-box">{{ad.ownerEmail}}</div>
+                <div class="col-xs-4 col-md-10 dot-box info-box">{{ad.ownerEmail}}</div>
             </div>
             <div class="col-xs-12">
                 <label class="col-xs-4 col-md-2 control-label">Tel.</label>
-                <div class="col-xs-4 col-md-10 dot-box">{{ad.ownerPhone}}</div><br/>
+                <div class="col-xs-4 col-md-10 dot-box info-box">{{ad.ownerPhone}}</div><br/>
             </div>
         </div>
     </div>
