--- a/templates/main/right-sidebar.html
+++ b/templates/main/right-sidebar.html
@@ -1,9 +1,10 @@
-<div class="box">
-  <h2>Categories</h2>
- TODO
-</div>
-
-<div class="box">
-  <h2>Towns</h2>
- TODO
+<div class="col-xs-12">
+    <div class="box">
+        <h2>Categories</h2>
+        TODO
+    </div>
+    <div class="box">
+        <h2>Towns</h2>
+        TODO
+    </div>
 </div>
