--- a/templates/main/right-sidebar.html
+++ b/templates/main/right-sidebar.html
@@ -1,10 +1,16 @@
-<div class="col-xs-12">
-    <div class="box">
-        <h2>Categories</h2>
-        TODO
-    </div>
-    <div class="box">
-        <h2>Towns</h2>
-        TODO
-    </div>
+<div class="box">
+    <h2>Categories</h2>
+    <ul class="sidebar-menu" ng-controller="CategoryControler">
+        <li ng-repeat="category in categories">
+            {{category.name}}
+        </li>
+    </ul>
+</div>
+<div class="box">
+    <h2>Towns</h2>
+    <ul class="sidebar-menu" ng-controller="TownControler">
+        <li ng-repeat=" town in towns">
+            {{town.name}}
+        </li>
+    </ul>
 </div>
