--- a/templates/user/deletead.html
+++ b/templates/user/deletead.html
@@ -27,7 +27,7 @@
         </div>
         <div class="col-xs-12">
             <div class="col-xs-offset-2 col-xs-4 text-right">
-                <input type="button" value="Delete" ng-click="deleteAd(adId)" />
+                <input type="button" value="Delete" ng-click="deleteAd()" />
             </div>
             <div class="col-xs-6 text-left">
                 <input type="reset" value="Cancel" ng-click="backToMyAds()" />
